# apps

./: .gitignore  .gitmodules  README.md  geniusweezer.py  gspreadtest.py  maintenance.py  maintenance_config.py  maintenance_log.txt  pdf.py  pool.py  pyproject.toml  songdata.py  tt-hits.py  weezerplayback.py
